core/static/css/v2/pages/story/story.less
@import "../../colors/colors";
@import "../../layout/mixins";
@import "../../layout/responsive";
@import "config";

#main_content {
  margin-top: 0;
}

#mainnav {
  margin: 0;
}

.banner-container {
  position: relative;
  margin-bottom: 40px;
  .banner-info {
    position: absolute;
    z-index: 1;
    bottom: 0;
    width: 100%;
    background: @bg-dark-transparent;
    padding: 30px 0 0 0;
    .row-1 {
      .font-size(16);
      .tag {
        color: @text-color-tag;
        text-transform: uppercase;
        .tag-space{
          padding-right: 2px;
        }
        .tag-space-both{
          padding-right: 10px;
          padding-left: 10px;
          color: @text-light;
        }
      }
      .date {
        color: @text-light;
      }
    }
    h2 {
      .font-size(56);
      color: @text-light;
    }
    p {
      .font-size(24);
      color: @text-light;
      font-weight: 300;
    }
    select {
      background: none;
      border: none;
      outline: none;
    }
    .banner-label{
      color: @text-color-banner-lang;
      padding-right: 8px;
    }
    .banner-dropdown {
      ul {
        margin: 0 0 20px 0;
        color: @text-light;
        li {
          float: none;
          padding: 0;
          border-top: none;
          border-right: none;
          margin: 0 0 20px 0;
          color: #FFF;
          float: none;
          position: relative;
          background: rgba(0,0,0,0.3);
          a {
            color: @text-light;
            &:hover {
              color: @link-primary;
            }
          }
        }
      }
    }
    .fa-angle-down:before{
      margin-left: auto;
      margin-top: 0.1em;
      color: @primary-color;
      font-size: 1.2em;
    }
    .banner-language-list{
      position: relative;
    }
    ul {

      margin: 0 0 20px 0;
      color: @text-light;
      li {
          float: left;
          padding: 10px 20px;
          border-top: 1px solid @border-banner;
          border-right: 1px solid @border-banner;
        &:last-child {
          border-right: none;
        }

        a{
          color: @text-light;
          &:hover{
            color: @link-primary;
          }
        }
      }
      .social-icon{
        padding: 6px 20px 4px 20px;
        a{
          border: 1px solid @border-light;
          border-radius: 20px;
          display: inline-block;
          height: 30px;
          width: 30px;
          text-align: center;
          padding-top: 5px;
          &:hover{
            text-decoration: none;
            border: 1px solid @link-primary;
          }
        }
      }
    }
  }
}

.article-container{
  text-align: left;
  .content-map{
    margin-right: 30px;
    .subtitle{
      color: @title;
      line-height: 30px;
    }
    i{
      float: right;
      .font-size(12);
      line-height: 30px;
    }
    a{
      .font-size(18);
      display: inline-block;
      width: 100%;
      margin-top: 10px;
      padding-top: 10px;
    }
    .title{
      border-top: 2px solid @primary-color;
    }
    .map-top-title{
      font-weight: bold;
    }
  }
  a{
    color: @link-primary;
    &:hover{
      color: @link;
    }
  }
  p{
    line-height: 40px;
    .font-size(16);
    margin: 20px 0;
  }
  .image-desc{
    color: @text-color-image-desc;
    .font-size(13);
    line-height: 18px;
    text-align: center;
  }
  .quote{
    border-top: 1px solid @primary-color;
    border-bottom: 1px solid @primary-color;
    line-height: 60px;
    .font-size(32);
    color: @title;
    padding: 20px 0;
  }
  .faces{
    border-top: 3px solid @light-grey;
    padding: 20px 0;
    margin: 0;
    color: @grey;
    &:extend(.subtitle);
  }
}

@media (max-width: @screen-xs-max) {
  .banner-container .banner-info{
    position: static;
    background: @bg-dark;
  }
}
@media (min-width: @screen-lg-min) {
  .banner-container{
    width: 100%;
    height: 100vh;
    img{
      max-height: 100%;
    }
  }
}
@media print {
  #header{
    display: none;
  }
  img{
    max-height: 510px;
    text-align: left;
    margin: 0 20px 20px 0;
    float: left;
  }
  .content-map{
    display: none;
  }
  .banner-container{
    max-height: auto;
    overflow: visible;
    position: static;
    .banner-info{
      float: left;
      position: static;
      background: @bg-dark;
      h2{
        color: black;
      }
      ul{
        display: none;
      }
    }
  }
  .fa-expand{
    display: none;
  }
  .faces{
    display: none;
    + img{
      display: none;
    }
  }
  .related-stories, .article-grid{
    display: none;
  }
  footer{
    display: none;
  }
}

